# augmenta-sec

./: .dockerignore  .env.example  .gitlab-ci-template.yml  .prettierrc  BACKLOG-DELIVERED.md  BACKLOG-GROOMED.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT-SPRINT.md  Dockerfile  Dockerfile.server  README.md  SECURITY.md  action.yml  config.example.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml  docker.yml  dogfood.yml  publish.yml  release.yml
docs/: MANUAL.md  STRATEGY.md  configuration.md  contributing.md  detectors.md  getting-started.md  providers.md  versioning.md
docs/adr/: 001-llm-role-routing.md  002-scanner-agnostic.md  003-knowledge-directory.md  004-git-platform-agnostic.md  005-esm-typescript.md  006-detector-architecture.md  007-llm-gateway-design.md  008-scanner-adapter-pattern.md  README.md
scripts/: dogfood.sh  test-llm.mjs  version.mjs
scripts/sprint-mgmt/: README.md  cli.mjs
src/: index.ts
src/cli/: index.ts  output.ts  progress.ts  verbosity.ts
src/config/: defaults.ts  global.ts  index.ts  loader.ts  profile-merge.ts  schema.ts
src/discovery/: engine.ts  profile-merge.ts  profile-writer.ts  types.ts
src/errors/: handler.ts  index.ts  types.ts  user-errors.ts
templates/: gitlab-ci.yml
test-fixtures/python-django/: Dockerfile  manage.py  pyproject.toml  requirements.txt
test-fixtures/python-django/.github/workflows/: ci.yml
test-fixtures/python-django/app/: settings.py  urls.py
(+295 files in other folders)
